8237524: AArch64: String.compareTo() may return incorrect result

Reviewed-by: aph